# crossequa

./: Cargo.toml  build-web.sh  default.nix  notes.txt  tree.txt  web_build.sh
.cargo/: config.toml
assetsRaw/textures/: convert.sh
src/: atlas_test.rs  board.rs  crossequa_plugin.rs  equation.rs  grid.rs  lighting.rs  main.rs  player_input.rs  texture_manager.rs
web/: crossequa.d.ts  crossequa.js  crossequa_bg.wasm.d.ts  index.html
