[package]
name = "crossequa"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0" }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
rand = "0.9.1"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Optimizations
[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3
