[package]
name = "crossequa"
version = "0.1.0"
edition = "2024"

# [workspace]
#resolver = "2"


[dependencies]

bevy = { version = "0.16.0", default-features = false, features = ["bevy_asset", "bevy_color", "bevy_core_pipeline", "bevy_pbr", "bevy_render", "bevy_state", "bevy_text", "bevy_ui", "bevy_ui_picking_backend"] }
bevy-inspector-egui = "0.31.0"
bevy_egui = "0.34.1"
rand = "0.9.1"

# bevy-inspector-egui = "0.31.0"
# rand = "0.9.1"
# symbolica = "0.16.0"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]


[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

# Optimizations
[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3
